# ChangeLog for media-libs/libshout
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libshout/ChangeLog,v 1.46 2012/10/05 09:14:45 ssuominen Exp $

  05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> libshout-2.3.1.ebuild:
  Fix LICENSE from GPL-2 to LGPL-2 as per COPYING file.

  05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> libshout-2.3.1.ebuild:
  USE="static-libs" and use prune_libtool_files function from eutils.eclass to
  remove unnecessary libshout.la.

  05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -libshout-2.1.ebuild,
  -libshout-2.2.2.ebuild, -files/libshout-2.2.2-asneeded.patch,
  -files/libshout-2.2.2-automagic.patch, -libshout-2.3.0.ebuild:
  old

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> libshout-2.3.1.ebuild:
  alpha/ia64/sh/sparc stable wrt #429126

  27 Sep 2012; Anthony G. Basile <blueness@gentoo.org> libshout-2.3.1.ebuild:
  stable ppc ppc64, bug #429126

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libshout-2.3.1.ebuild:
  x86 stable wrt bug #429126

  19 Sep 2012; Jeroen Roovers <jer@gentoo.org> libshout-2.3.1.ebuild:
  Stable for HPPA (bug #429126).

  14 Sep 2012; Markus Meier <maekke@gentoo.org> libshout-2.3.1.ebuild:
  arm stable, bug #429126

  13 Sep 2012; Agostino Sarubbo <ago@gentoo.org> libshout-2.3.1.ebuild:
  Stable for amd64, wrt bug #429126

  08 Jul 2012; Raúl Porcel <armin76@gentoo.org> libshout-2.3.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #419097

*libshout-2.3.1 (22 Jun 2012)

  22 Jun 2012; Alexis Ballier <aballier@gentoo.org> +libshout-2.3.1.ebuild:
  version bump

  07 Jun 2012; Brent Baude <ranger@gentoo.org> libshout-2.3.0.ebuild:
  Marking libshout-2.3.0 ppc for bug 419097

  06 Jun 2012; Markus Meier <maekke@gentoo.org> libshout-2.3.0.ebuild:
  arm stable, bug #419097

  06 Jun 2012; Jeroen Roovers <jer@gentoo.org> libshout-2.3.0.ebuild:
  Stable for HPPA (bug #419097).
